[fix] broken layout in Firefox

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -15,13 +15,14 @@
 
     > div {
       color: #ffffff;
-      display: table;
       float: left;
       font-size: 8em;
       height: 180px;
       line-height: 180px;
       text-align: center;
-      width: inherit;
+      min-width: 100%;
+      width: 100%;
+      max-width: 100%;
 
       &:nth-of-type(1),
       &:nth-last-of-type(2) {
